# t-aws

./: .gitignore  CHANGELOG.md  Cargo.toml  README.ko.md  README.md  ROADMAP.md  ROADMAP_KR.md  phase2-test-scenarios.csv  rust-coverage.sh  rust-lint-cleanup.sh
.github/workflows/: build.yml
scripts/: check-phase2-scenarios.sh
src/: app.rs  aws_cli.rs  blueprint.rs  cli.rs  download.rs  env_bootstrap.rs  error.rs  handler.rs  i18n.rs  install.rs  main.rs  output.rs  platform.rs  resources.rs  settings.rs  ui.rs  update.rs
src/aws_cli/: asg.rs  asg_sdk.rs  common.rs  ec2.rs  ecr.rs  ecr_sdk.rs  iam.rs  load_balancer.rs  mod.rs  security_group.rs  vpc.rs
src/ui/: mod.rs  widgets.rs
tests/: cli_integration.rs  env_bootstrap_integration.rs
tools/quality/: check-scenarios.sh  rust-lint-cleanup.sh
