[package]
name = "emd"
version = "0.1.1"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22.1"
clap = { version = "4.5", features = ["derive"] }
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }
tokio = { version = "1.49.0", features = ["rt", "macros", "rt-multi-thread"] }
aws-config = { version = "1.8.13", features = ["behavior-version-latest", "rustls"] }
aws-sdk-autoscaling = "1.70"
aws-sdk-ecr = "1.106.0"
aws-credential-types = "1.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
