[package]
name = "emd"
version = "0.1.1"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22.1"
percent-encoding = "2.3"
clap = { version = "4.5", features = ["derive"] }
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
aws-config = { version = "1.5", features = ["behavior-version-latest", "sso", "credentials-process", "credentials-login"] }
aws-sdk-autoscaling = "1.70"
aws-sdk-ec2 = "1"
aws-sdk-ecr = "1"
aws-sdk-elasticloadbalancingv2 = "1"
aws-sdk-iam = "1"
aws-sdk-sts = "1"
aws-credential-types = "1.2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
